another potential fix for layout bug

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -12,7 +12,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 100vh;
 }
 
 .projects-title h2 {
